--- a/RAL/vesuvio_report/references.bib
+++ b/RAL/vesuvio_report/references.bib
@@ -37,7 +37,7 @@
 }
 
 @article{mayers2004vesuvio,
-  title={VESUVIO—the double difference inverse geometry spectrometer at ISIS},
+  title={VESUVIO - the double difference inverse geometry spectrometer at ISIS},
   author={Mayers, J and Tomkinson, J and Abdul-Redah, T and Stirling, WG and Andreani, C and Senesi, R and Nardone, M and Colognesi, D and Degiorgi, E},
   journal={Physica B: Condensed Matter},
   volume={350},
@@ -132,4 +132,15 @@
   title = {Mantid Github Scripts Repository},
   howpublished = {\url{https://github.com/mantidproject/scripts/tree/master/development/inelastic}},
   note = {Accessed: 2014-08-11}
+}
+
+@article{andreani2005measurement,
+  title={Measurement of momentum distribution of lightatoms and molecules in condensed matter systems using inelastic neutron scattering},
+  author={Andreani, C and Colognesi, D and Mayers, J and Reiter, GF and Senesi, R},
+  journal={Advances in physics},
+  volume={54},
+  number={5},
+  pages={377--469},
+  year={2005},
+  publisher={Taylor \& Francis}
 }
